critical warnings with gstreamer audio
@jjongsma
Submitted by Jonathon Jongsma Assigned to Spice Bug List
Description
When I connect to a machine that has an ac97 sound device with a virt-viewer built using --with-audio=gstreamer, I get the following warnings on the console:
$ virt-viewer $vm
(virt-viewer:27631): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion 'segment->format == format' failed
(virt-viewer:27631): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion 'segment->format == format' failed
(virt-viewer:27631): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion 'segment->format == format' failed
(virt-viewer:27631): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion 'segment->format == format' failed