gstaudio: specify the segment format to be time-based

With gstreamer audio backend, the following criticals are printed:
(virt-viewer:27631): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion 'segment->format == format' failed

Because the default appsrc segment format is byte-based, although an
audio sink want a time-based segment.

Fixes:
https://gitlab.freedesktop.org/spice/spice-gtk/issues/39

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Victor Toso <victortoso@redhat.com>